--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -17,6 +17,36 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:id="@+id/home_button_kesehatan"
+                android:layout_width="365dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/support_shape"
+                android:text="           ASURANSI KESEHATAN"
+                android:textSize="23dp"
+                android:textStyle="bold"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_button_kendaraan" />
+
+            <Button
+                android:id="@+id/home_button_kendaraan"
+                android:layout_width="365dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/support_shape"
+
+                android:text="           ASURANSI KENDARAAN"
+                android:textSize="23dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_button_plan100" />
+
+            <Button
                 android:id="@+id/home_button_plan100"
                 android:layout_width="365dp"
                 android:layout_height="60dp"
@@ -150,7 +180,7 @@
                 android:id="@+id/textView27"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="37dp"
+                android:layout_marginTop="24dp"
                 android:text="Info dan Tips"
                 android:textColor="@color/black"
                 android:textSize="22dp"
@@ -158,7 +188,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.065"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/home_button_plan100" />
+                app:layout_constraintTop_toBottomOf="@+id/home_button_kesehatan" />
 
             <Button
                 android:id="@+id/home_button_isiSaldo"
@@ -189,7 +219,9 @@
                 android:id="@+id/home_finance"
                 android:layout_width="41dp"
                 android:layout_height="31dp"
-                android:layout_marginEnd="76dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/home_imageSlider"
@@ -208,6 +240,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/home_imageSlider"
                 app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/ic_home" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/home_button_kendaraan"
+                app:layout_constraintTop_toTopOf="@+id/home_button_kendaraan"
+                app:srcCompat="@drawable/car" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="13dp"
+                app:layout_constraintStart_toStartOf="@+id/home_button_kesehatan"
+                app:layout_constraintTop_toTopOf="@+id/home_button_kesehatan"
+                app:srcCompat="@drawable/health" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
